--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-﻿DancingGoatMvc.sln
+﻿################################################################################
+# This .gitignore file
+################################################################################
+
+/DancingGoatMvc.sln
