push web.config change

--- a/CMS/Web.config
+++ b/CMS/Web.config
@@ -12,7 +12,7 @@
     <add key="CMSProgrammingLanguage" value="C#"/>
     <add key="WS.webservice" value="http://localhost/WebService/webservice.asmx"/>
     <add key="CMSTrialKey" value="CX12-20200604-jwTx5t"/>
-    <add key="ChartImageHandler" value="storage=session;timeout=20;"/>
+    <add key="ChartImageHandler" value="storaggite=session;timeout=20;"/>
     <add key="PageInspector:ServerCodeMappingSupport" value="Disabled"/>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
     <add key="CMSApplicationGuid" value="4b68c3dc-ab11-4ab6-81b3-b301c0828ad7"/>
@@ -24,6 +24,7 @@
   <connectionStrings>
     <clear/>
     <!--add name="CMSConnectionString" connectionString="Server=tcp:kenticoserver.database.windows.net,1433;Initial Catalog=kenticoDB;Persist Security Info=False;User ID=sopacifi;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/ -->
+    <!-- TESTING -->
     <add name="CMSConnectionString" connectionString="Data Source=(localdb)\.\Kentico;Initial Catalog=Kentico12;Integrated Security=True;Persist Security Info=False;Connect Timeout=60;Encrypt=False;Current Language=English;"/>
   </connectionStrings>
   <system.web>
